<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-starter-parent</artifactId>
    <version>3.2.0</version>
    <relativePath/> <!-- lookup parent from repository -->
  </parent>
  <groupId>com.adel</groupId>
  <artifactId>spring-chronicle</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <name>spring-chronicle</name>
  <description>Demo project for Spring Boot</description>
  <properties>
    <java.version>17</java.version>
    <maven.compiler.release/>
    <maven.compiler.source>${java.version}</maven.compiler.source>
    <maven.compiler.target>${java.version}</maven.compiler.target>
  </properties>
  <dependencies>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-web</artifactId>
    </dependency>

    <dependency>
      <groupId>org.projectlombok</groupId>
      <artifactId>lombok</artifactId>
      <optional>true</optional>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-test</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>net.openhft</groupId>
      <artifactId>chronicle-queue</artifactId>
    </dependency>
    <dependency>
      <groupId>net.openhft</groupId>
      <artifactId>chronicle-core</artifactId>
    </dependency>
  </dependencies>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>net.openhft</groupId>
        <artifactId>chronicle-bom</artifactId>
        <version>2.24ea76</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <build>
    <plugins>
      <plugin>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-maven-plugin</artifactId>
        <configuration>
          <excludes>
            <exclude>
              <groupId>org.projectlombok</groupId>
              <artifactId>lombok</artifactId>
            </exclude>
          </excludes>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.1</version>
        <configuration>
          <compilerArgs>
            <args>--add-exports=java.base/jdk.internal.ref=ALL-UNNAMED</args>
            <args>--add-exports=java.base/sun.nio.ch=ALL-UNNAMED</args>
            <args>--add-exports=jdk.unsupported/sun.misc=ALL-UNNAMED</args>
            <args>--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</args>
            <args>--add-opens=jdk.compiler/com.sun.tools.javac=ALL-UNNAMED</args>
            <args>--add-opens=java.base/java.lang=ALL-UNNAMED</args>
            <args>--add-opens=java.base/java.lang.reflect=ALL-UNNAMED</args>
            <args>--add-opens=java.base/java.io=ALL-UNNAMED</args>
            <args>--add-opens=java.base/java.util=ALL-UNNAMED</args>
          </compilerArgs>
        </configuration>
      </plugin>
    </plugins>
  </build>

</project>
